# darya

./: Cargo.toml  LICENSE-3.0  README.md
.github/workflows/: ci.yaml
src/: app.rs  cli.rs  config.rs  event.rs  fs_scan.rs  input.rs  layout.rs  lib.rs  main.rs  scan_control.rs  size.rs  snapshot.rs  state.rs  theme.rs  tree.rs  treemap.rs  ui.rs
src/app/: cli.rs  config.rs  fs_scan.rs  input.rs  mod.rs  modes.rs  scan_accumulator.rs  scan_control.rs  scan_manager.rs  size.rs  snapshot.rs  state.rs  tree.rs  ui_thread.rs
src/app/scan/: accumulator.rs  control.rs  manager.rs  mod.rs  scanner.rs
src/events/: controller.rs  event_loop.rs  handlers.rs  mod.rs
src/events/actions/: files.rs  filter.rs  mod.rs  navigation.rs  scan.rs
src/platform/: metadata.rs  mod.rs
src/ui/: display.rs  format.rs  helpers.rs  layout.rs  mod.rs  render.rs  theme.rs  treemap.rs  view_model.rs
src/ui/components/: activity_panel.rs  detail_panel.rs  filesystem_panel.rs  footer.rs  mod.rs  treemap_panel.rs
tests/: scan_sizes.rs  treemap.rs
