[package]
name = "dar"
version = "0.1.1"
edition = "2024"
description = "A fast, keyboard-driven disk usage explorer built on ratatui."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
directories = "5.0"
globset = "0.4"
ratatui = { version = "0.24", default-features = false, features = ["crossterm"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
toml = "0.7"
throbber-widgets-tui = "0.8"
walkdir = "2.3"
flate2 = "1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
