[package]
name = "darya"
version = "0.1.5"
edition = "2024"
description = "A fast, keyboard-driven disk usage explorer built on ratatui."
license = "GPL-3.0-only"
repository = "https://github.com/mrkatebzadeh/darya"
homepage = "https://github.com/mrkatebzadeh/dar"
readme = "README.md"
keywords = ["disk-usage", "terminal-ui", "ratatui"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
globset = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
toml = "1.0"
throbber-widgets-tui = "0.11"
walkdir = "2.3"
flate2 = "1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dev-dependencies]
tempfile = "3"
